# verizon-poc

./: .gitignore  construction_query_flow.html  docker-compose.yaml  docker-compose.yml  graph.html  main.py  output.json  pyproject.toml  real_estate_flow.html  role_graph.html  sql_query.sql  sql_query_flow.html
agentic_ai/: __init__.py  main.py  mapper.py
agentic_ai/config/: __init__.py  langfuse.py  settings.py
agentic_ai/data/: data.txt
agentic_ai/exceptions/: __init__.py  api_error.py
agentic_ai/src/construction_query/: __init__.py  main.py
agentic_ai/src/construction_query/crews/: __init__.py
agentic_ai/src/construction_query/schemas/: __init__.py
agentic_ai/src/project_activities/: __init__.py  main.py
agentic_ai/src/project_activities/schemas/: project.py
agentic_ai/src/real_estate_query/: __init__.py  main.py
agentic_ai/src/role_based_agents/: __init__.py  main.py
agentic_ai/src/sql_query/: __init__.py  main.py
backend/: docker-compose.yaml
backend/app/api/: __init__.py
backend/app/core/: config.py
backend/app/db/: session.py
backend/app/dependencies/: db.py
backend/app/models/: entities.py  users.py
backend/app/schemas/: __init__.py  common.py  query.py  users.py
backend/app/services/: alert_service.py
backend/docker/db/: root.txt
web/: Home.py
web/deprecated_pages/: Alerts.py
web/pages/: 1 Agentic_Flow.py  2 Role_Based_Agents.py  3 Projects.py  4 Agentic Assistant.py  Agentic_Flow.py  Alerts.py  Chat_AI.py  Projects.py
web/utils/: alert_response.json  response.json  response_builder.py  sidebar_logo.py
(+66 files in other folders)
