[project]
name = "agentic-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10, <3.13"
dependencies = [
    "asyncmy>=0.2.10",
    "crewai>=0.148.0",
    "crewai-tools>=0.55.0",
    "fastapi[standard]>=0.116.0",
    "pydantic-settings>=2.10.1",
    "sqlalchemy[asyncio]>=2.0.41",
]
